--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
 }
 
 .circle {
-    border-radius: 50%;
+    border-radius: 50%; 
     height: 3rem;
     width: 3rem;
     overflow: hidden;
@@ -73,6 +73,24 @@
 .fa-regular {
     font-size: 1.5rem;
     color: gray;
+}
+
+li {
+    border-radius: 5px;
+    padding: 5px;
+}
+
+li .fa-solid {
+    font-size: 1rem;
+    margin-right: 5px;
+}
+
+li:hover {
+    background-color: #dadbd4;
+}
+
+.dropdown-menu{
+    border: none;
 }
 
 .box-contatti {
